examples/test/testpolicy10570.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10570
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key6: value22
      key16: value19
      key10: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value2
          key2: value26
      podSelector:
        matchLabels:
          key27: value9
          key28: value10
          key42: value37
